add missav sitemap

--- a/projects/javlibrary_crawler-project/pyproject.toml
+++ b/projects/javlibrary_crawler-project/pyproject.toml
@@ -23,6 +23,7 @@ botocore = "1.33.0"
 boto3 = "1.33.0"
 # advanced boto3 session manager
 boto_session_manager = "1.7.2"
+SQLAlchemy = "2.0.30"
 # ------------------------------------------------------------------------------
 # AWS DevOps tools
 # ------------------------------------------------------------------------------
