update deps, update sitemap

--- a/projects/javlibrary_crawler-project/pyproject.toml
+++ b/projects/javlibrary_crawler-project/pyproject.toml
@@ -24,6 +24,7 @@ boto3 = "1.33.0"
 # advanced boto3 session manager
 boto_session_manager = "1.7.2"
 SQLAlchemy = "2.0.30"
+sqlalchemy_mate = "2.0.0.1"
 # ------------------------------------------------------------------------------
 # AWS DevOps tools
 # ------------------------------------------------------------------------------
