--- a/projects/javlibrary_crawler-project/requirements.txt
+++ b/projects/javlibrary_crawler-project/requirements.txt
@@ -101,6 +101,9 @@ jmespath==1.0.1 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0"
 pathlib-mate==1.3.2 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
     --hash=sha256:8e16efd03016d4dd2ff0dc5dc05db666bebea6c8528aebd471953287644dd3e6 \
     --hash=sha256:a4b29e0d38abb14e25a8a292856a04c7f48b2eafe9f7ebf36166dec5a13a0b0d
+prettytable==3.10.0 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
+    --hash=sha256:6536efaf0757fdaa7d22e78b3aac3b69ea1b7200538c2c6995d649365bddab92 \
+    --hash=sha256:9665594d137fb08a1117518c25551e0ede1687197cf353a4fdc78d27e1073568
 pynamodb==5.5.1 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
     --hash=sha256:6aa659c11d4a8a18ef2d75392a08828d45ab9eefb9638871d455929a52d66fc3 \
     --hash=sha256:b9d9a59afd9edbc3db63a267e67db764831f277477ae744ed4febb778ef1a098
@@ -125,6 +128,9 @@ six==1.16.0 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
 smart-open==6.2.0 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
     --hash=sha256:088bf00f9327c71e549bc2f86567d3320df5d89667f009ce1c16568976068ef7 \
     --hash=sha256:1b4df5c8365218f3852c507451920ccad606c80b0acb4e67508e50ba9b5d2632
+sqlalchemy-mate==2.0.0.1 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
+    --hash=sha256:9523bf65ad833abfed546b767bddfc6c366d60cc420bc2e8588e7d08a5d1c481 \
+    --hash=sha256:c4bccf5817e0041cd565c795f3c3d4f8f851a76e951eef742d68c70faa1cae03
 sqlalchemy==2.0.30 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
     --hash=sha256:0094c5dc698a5f78d3d1539853e8ecec02516b62b8223c970c86d44e7a80f6c7 \
     --hash=sha256:0138c5c16be3600923fa2169532205d18891b28afa817cb49b50e08f62198bb8 \
@@ -190,3 +196,6 @@ urllib3==2.0.7 ; python_version >= "3.10" and python_version < "3.11.dev0" \
 versioned==0.6.1 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
     --hash=sha256:1f35177edd7435bec3cc7567f05bbdf82fdf3e84feb8ba9c515b484bd124b84c \
     --hash=sha256:7d1287eb3a053f2fe974bff1562721e3f636b05cca51fb6579b34dda80506133
+wcwidth==0.2.13 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
+    --hash=sha256:3da69048e4540d84af32131829ff948f1e022c1c6bdb8d6102117aac784f6859 \
+    --hash=sha256:72ea0c06399eb286d978fdedb6923a9eb47e1c486ce63e9b4e64fc18303972b5
