--- a/projects/javlibrary_crawler-project/requirements.txt
+++ b/projects/javlibrary_crawler-project/requirements.txt
@@ -4,9 +4,6 @@ aws-arns==1.4.3 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0"
 aws-console-url==1.4.1 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
     --hash=sha256:5ab29d0fd682759fa6bc3f1198777ecb790103f95d89337fca9a56ec1399116b \
     --hash=sha256:bc9ae2d32f710441e16c093d2d7b0e22efa169fe056ff2b2a453c3430436ab77
-aws-glue-artifact==0.2.1 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
-    --hash=sha256:9449c75875af0decf72c31dc892f64125de3d677e3415b95b4c81490ade3e70e \
-    --hash=sha256:a4d9f2c7cc58ae9c4d5dc24c145faef991e553e587b22e46e4395286299fb041
 aws-lambda-event==2.0.2 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
     --hash=sha256:30f2da7d03f4bb70ffab9f33082864bb9e833f0693a350066c83008eea2573a6 \
     --hash=sha256:3a72c88cd975e5d8a25ea0540f477aedf4f60a652f6fafe2831008aa19628a40
@@ -101,12 +98,15 @@ jmespath==1.0.1 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0"
 pathlib-mate==1.3.2 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
     --hash=sha256:8e16efd03016d4dd2ff0dc5dc05db666bebea6c8528aebd471953287644dd3e6 \
     --hash=sha256:a4b29e0d38abb14e25a8a292856a04c7f48b2eafe9f7ebf36166dec5a13a0b0d
-prettytable==3.10.0 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
-    --hash=sha256:6536efaf0757fdaa7d22e78b3aac3b69ea1b7200538c2c6995d649365bddab92 \
-    --hash=sha256:9665594d137fb08a1117518c25551e0ede1687197cf353a4fdc78d27e1073568
-pynamodb==5.5.1 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
-    --hash=sha256:6aa659c11d4a8a18ef2d75392a08828d45ab9eefb9638871d455929a52d66fc3 \
-    --hash=sha256:b9d9a59afd9edbc3db63a267e67db764831f277477ae744ed4febb778ef1a098
+prettytable==3.10.2 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
+    --hash=sha256:1cbfdeb4bcc73976a778a0fb33cb6d752e75396f16574dcb3e2d6332fd93c76a \
+    --hash=sha256:29ec6c34260191d42cd4928c28d56adec360ac2b1208a26c7e4f14b90cc8bc84
+pynamodb-mate==6.0.0.3 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
+    --hash=sha256:545afaa182d60afa3a0d3b645d18bfc8264260c8e0ef13d892ebe321d2e0561a \
+    --hash=sha256:95d4f288e7f20304df4a61d521ad0d23355c332da41916eaafa4afbda831e38e
+pynamodb==6.0.0 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
+    --hash=sha256:05b3aa02021050393e0667944a20af3da60f55984de86126786844c2d47b9a18 \
+    --hash=sha256:7217f87b6e5c9866d915265fd462fa4a012b37b0149bf1f814b33100b50e901f
 pyproject-ops==0.8.1 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
     --hash=sha256:5adba9566dd8e32c60389f5303788eae10c761b07ec08460f8e544527fc1a1a6 \
     --hash=sha256:bf910136d6bdd56e41496236fa40b9809056264c5f9a691a4f13575590c800f0
@@ -187,15 +187,12 @@ termcolor==2.4.0 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0
 tt4human==0.3.1 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
     --hash=sha256:4345540e8833e67b412f73d86e877ca904a1e56349032937b048676541e6b0ea \
     --hash=sha256:b57076592cdb0a47544eed951e78fc7250fa0712031658d89b19b32025cca680
-typing-extensions==4.11.0 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
-    --hash=sha256:83f085bd5ca59c80295fc2a82ab5dac679cbe02b9f33f7d83af68e241bea51b0 \
-    --hash=sha256:c1f94d72897edaf4ce775bb7558d5b79d8126906a14ea5ed1635921406c0387a
+typing-extensions==4.12.2 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
+    --hash=sha256:04e5ca0351e0f3f85c6853954072df659d0d13fac324d0072316b67d7794700d \
+    --hash=sha256:1a7ead55c7e559dd4dee8856e3a88b41225abfe1ce8df57b7c13915fe121ffb8
 urllib3==2.0.7 ; python_version >= "3.10" and python_version < "3.11.dev0" \
     --hash=sha256:c97dfde1f7bd43a71c8d2a58e369e9b2bf692d1334ea9f9cae55add7d0dd0f84 \
     --hash=sha256:fdb6d215c776278489906c2f8916e6e7d4f5a9b602ccbcfdf7f016fc8da0596e
-versioned==0.6.1 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
-    --hash=sha256:1f35177edd7435bec3cc7567f05bbdf82fdf3e84feb8ba9c515b484bd124b84c \
-    --hash=sha256:7d1287eb3a053f2fe974bff1562721e3f636b05cca51fb6579b34dda80506133
 wcwidth==0.2.13 ; python_version >= "3.10.dev0" and python_version < "3.11.dev0" \
     --hash=sha256:3da69048e4540d84af32131829ff948f1e022c1c6bdb8d6102117aac784f6859 \
     --hash=sha256:72ea0c06399eb286d978fdedb6923a9eb47e1c486ce63e9b4e64fc18303972b5
