make it github action ready

--- a/projects/javlibrary_crawler-project/pyproject.toml
+++ b/projects/javlibrary_crawler-project/pyproject.toml
@@ -26,9 +26,8 @@ boto_session_manager = "1.7.2"
 SQLAlchemy = "2.0.30"
 sqlalchemy_mate = "2.0.0.1"
 # AWS DynamoDB ORM
-pynamodb = "6.0.0"
-pynamodb_mate = "6.0.0.3"
-
+pynamodb = "6.0.1"
+pynamodb_mate = "6.0.0.4"
 # ------------------------------------------------------------------------------
 # AWS DevOps tools
 # ------------------------------------------------------------------------------
@@ -59,6 +58,11 @@ aws_lambda_layer = "0.5.2"
 aws_lambda_event = "2.0.2"
 # helper functions
 boltons = "21.0.0"
+# ------------------------------------------------------------------------------
+# Crawler orchestration
+# ------------------------------------------------------------------------------
+tenacity = "8.5.0"
+PyGithub = "2.3.0"
 
 # ------------------------------------------------------------------------------
 # addtitional dependencies for development
