--- a/.github/workflows/javlibrary_crawler_site_missav.yml
+++ b/.github/workflows/javlibrary_crawler_site_missav.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Git Clone the Repository
         uses: actions/checkout@v4
         with:
-          ref: javlibrary_crawler/tst/crawler
+          ref: javlibrary_crawler/${{ inputs.user_env_name }}/crawler
       - name: 🔐 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
