use lxml for xml parsing

--- a/projects/javlibrary_crawler-project/pyproject.toml
+++ b/projects/javlibrary_crawler-project/pyproject.toml
@@ -59,8 +59,9 @@ aws_lambda_event = "2.0.2"
 # helper functions
 boltons = "21.0.0"
 # ------------------------------------------------------------------------------
-# Crawler orchestration
+# Crawler
 # ------------------------------------------------------------------------------
+lxml = "5.2.2"
 tenacity = "8.5.0"
 PyGithub = "2.3.0"
 
