--- a/projects/javlibrary_crawler-project/pyproject.toml
+++ b/projects/javlibrary_crawler-project/pyproject.toml
@@ -62,6 +62,7 @@ boltons = "21.0.0"
 # Crawler
 # ------------------------------------------------------------------------------
 lxml = "5.2.2"
+mpire = "2.10.2"
 tenacity = "8.5.0"
 PyGithub = "2.3.0"
 
